--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -4,6 +4,9 @@
     text-decoration: none;
     list-style: none;
 }
+body{
+    background: rgb(247, 247, 247);
+}
 $width:1200px;
 $fontSize:14px;
 .headerstyle{
@@ -231,6 +234,8 @@ $fontSize:14px;
         }
     }
 }
+
+/*购物车商品盒子*/
 #carBox{
     width: 1200px;
     margin: 0 auto 50px;
@@ -242,9 +247,8 @@ $fontSize:14px;
         color: #333;
         font-size: 14px;
         font-family: "微软雅黑";
-        background-color: #ffffff;
+        background: #ffffff;
         padding: 10px 0;
-        background: lightpink;
         .col1{
             width: 110px;
             float: left;
@@ -275,9 +279,36 @@ $fontSize:14px;
         }
     }
     .carInner{
-        background-color: #ffffff;
+        background: #fff;
         margin-top: 10px;
         width: 100%;
+        .type{
+            padding-left: 10px;
+            font-size: 14px;
+            color: #333;
+            padding: 20px 50px;
+            border-bottom: 1px solid #dedede;
+            input{
+                display: inline-block;
+                width: 18px;
+                height: 18px;
+                border: 1px solid #ccc;
+                margin-right: 40px;
+            }
+            .entity{
+                background: #53acff;
+            }
+            .icon{
+                width: 20px;
+                height: 20px;
+                text-align: center;
+                line-height: 20px;
+                margin: 0 5px 0 0;
+                border-radius: 3px;
+                color: #ffffff;
+                display: inline-block;
+            }
+        }
     }
 }
 
