--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -4,6 +4,9 @@
     text-decoration: none;
     list-style: none;
 }
+html,body{
+    background: #f7f7f7;
+}
 $width:1200px;
 $fontSize:14px;
 .headerstyle{
@@ -247,11 +250,72 @@ $fontSize:14px;
 #banner{
     width: 100%;
     height: 280px;
+    margin: 0 auto;
     // position: relative;
+    img{
+        width: 100%;
+        height: 280px;
+        margin: 0 auto;
+    };
 }
 
-
-
+/*详情页渲染区域*/
+#cardBox{
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 16px;
+    // background: orange;
+    overflow: hidden;
+    .cardInner{
+        float: left;
+        margin-right: 9px;
+        margin-bottom: 16px;
+        width: 288px;
+        height: 384px;
+        overflow: hidden;
+        position: relative;
+        text-align: center;
+        a{
+            display: block;
+            // float: left;
+            background-color: #fff;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            h4{
+                font-size: 16px;
+                color: #333;
+                padding-top: 24px;
+            }
+            img{
+                width: 286px;
+                height: 286px;
+                position: absolute;
+                left: 1px;
+                bottom: 1px;  
+            }
+            .descript{
+                color: #999;
+                font-size: 14px;
+                margin: 3px 0 ;
+            }
+            .price{
+                color: #ff7f00;
+                font-size: 14px;
+            }
+        }
+    }
+}
+/*分页*/
+#pagelist{
+    width: 100%;
+    height: 50px;
+    margin: 0 auto;
+    .page{
+        width: 1200px;
+        height: 50px;
+    }
+}
 /* 底部 */
 #footer{
     background-color: #fff;
